--- a/meta-ivi/conf/distro/poky-ivi-systemd.conf
+++ b/meta-ivi/conf/distro/poky-ivi-systemd.conf
@@ -19,6 +19,15 @@ DISTRO_FEATURES_append = " bluetooth systemd opengl wayland pam bluez5"
 DISTRO_FEATURES_remove = "x11"
 DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
 
+require conf/distro/include/security_flags.inc
+
+# FIXME: these pkgs are apparently broken when enabling (some of) the
+# security_flags, so they are therefore blacklisted here, (or the flags
+# are _partially) applied)
+SECURITY_CFLAGS_pn-lttng-ust = "${SECURITY_NO_PIE_CFLAGS}"
+SECURITY_CFLAGS_pn-persistence-administrator = ""
+SECURITY_LDFLAGS_pn-persistence-administrator = ""
+
 # do not use gstreamer 1.2.3 by default
 PREFERRED_VERSION_gstreamer1.0              ?= "1.10.4"
 PREFERRED_VERSION_gstreamer1.0-plugins-bad  ?= "1.10.4"
