fix syntax errors with new bitbake

--- a/meta-ivi/conf/distro/poky-ivi-systemd.conf
+++ b/meta-ivi/conf/distro/poky-ivi-systemd.conf
@@ -19,7 +19,7 @@ POKY_DEFAULT_DISTRO_FEATURES = "\
 include conf/distro/include/default-providers-ivi.inc
 # Conflicts with wayland. It is possible run wayland
 # on-top of x11 but that is not a use-case that we support
-DISTRO_FEATURES_remove = "x11 directfb"
+DISTRO_FEATURES:remove = "x11 directfb"
 
 PREFERRED_PROVIDER_udev ?= "systemd"
 PREFERRED_PROVIDER_udev-utils ?= "systemd"
